Fix logo ui on mobile

--- a/src/styles/logo.css
+++ b/src/styles/logo.css
@@ -1,61 +1,68 @@
 @font-face {
-    font-family: Uchen;
-    src: url(https://discoverfin.sfo3.digitaloceanspaces.com/1gc6el9ifp9gfuchenregularttf.ttf) format(truetype);
-    font-weight: 400;
-    font-style: normal;
-    font-display: auto;
+  font-family: Uchen;
+  src: url(https://discoverfin.sfo3.digitaloceanspaces.com/1gc6el9ifp9gfuchenregularttf.ttf)
+    format(truetype);
+  font-weight: 400;
+  font-style: normal;
+  font-display: auto;
 }
 @font-face {
-    font-family: Trenda;
-    src: url(https://uploads-ssl.webflow.com/629e3357919ae1682f65b07c/62a64de45e8f63a8c8bad2ab_trenda_regular.otf) format(opentype);
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
+  font-family: Trenda;
+  src: url(https://uploads-ssl.webflow.com/629e3357919ae1682f65b07c/62a64de45e8f63a8c8bad2ab_trenda_regular.otf)
+    format(opentype);
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
 .d-flex {
-    display: flex;
+  display: flex;
 }
 
 .items-center {
-    align-items: center;
+  align-items: center;
 }
 
-
 .position-relative {
-    position: relative;
+  position: relative;
 }
 
 .circle__x {
-    border-radius: 50%;
-    display: flex;
-    font-family: 'Uchen';
-    width: 45px;
-    justify-content: center;
-    align-items: center;
-    height: 45px;
-    position: relative;
-    z-index: 1;
+  border-radius: 50%;
+  display: flex;
+  font-family: "Uchen";
+  width: 45px;
+  justify-content: center;
+  align-items: center;
+  height: 45px;
+  position: relative;
+  z-index: 1;
 }
 
 .strip__x {
-    height: 140%;
-    width: 10px;
-    z-index: 2;
-    transform: rotate(300deg);
-    position: absolute;
+  height: 140%;
+  width: 10px;
+  z-index: 2;
+  transform: rotate(300deg);
+  position: absolute;
 }
 
 .circle__x span {
-    margin-bottom: 0;
-    font-size: 24px;
-    z-index: 3;
+  margin-bottom: 0;
+  font-size: 24px;
+  z-index: 3;
 }
 
 .big__name {
-    font-size: 24px;
-    font-family: 'Trenda', sans-serif;
+  font-size: 24px;
+  font-family: "Trenda", sans-serif;
 }
 
 .space-x-4 > * + * {
-    margin-left: 1.25rem;
+  margin-left: 1.25rem;
+}
+
+@media screen and (max-width: 850px) {
+  .big__name {
+    display: none;
+  }
 }
